// Generated protobuf types (protobuf-ts)
//
// Note:
// Some NDS packages intentionally have overlapping type names across domains.
// To avoid re-export name collisions, we expose each domain as a namespace export.

export * as googleProtobufAny from "./google/protobuf/any";
export * as googleProtobufStruct from "./google/protobuf/struct";
export * as googleProtobufTimestamp from "./google/protobuf/timestamp";

export * as ndsAsset from "./nds/asset/asset";
export * as ndsAudit from "./nds/audit/rationale";
export * as ndsCommon from "./nds/common/common";
export * as ndsCommonV1 from "./nds/common/v1/common_v1";
export * as ndsContext from "./nds/context/context";
export * as ndsEvent from "./nds/event/event";
export * as ndsEventV1 from "./nds/event/v1/event_v1";
export * as ndsIdentity from "./nds/identity/identity";
export * as ndsIdentityV1 from "./nds/identity/v1/identity_v1";
export * as ndsLedgerV1 from "./nds/ledger/v1/ledger";
export * as ndsMemoryV1 from "./nds/memory/v1/memory";
export * as ndsMetadataV1 from "./nds/metadata/v1/metadata";
export * as ndsPolicy from "./nds/policy/policy";
export * as ndsProjection from "./nds/projection/projection";
export * as ndsQuery from "./nds/query/query";
export * as ndsQueryClient from "./nds/query/query.client";
export * as ndsSyncV1 from "./nds/sync/v1/sync";
export * as ndsTransaction from "./nds/transaction/transaction";

